# tacchi_ros

./: README.md  requirements.txt
gelsight_gazebo/src/: gelsight_driver.py
gelsight_simulation/: CMakeLists.txt  package.xml
gelsight_simulation/launch/: simulation.launch
gelsight_simulation/results/depth/: dot_in__10_-1_-1_9.png.npy  dot_in__11_-1_-1_10.png.npy  dot_in__13_-1_0_1.png.npy  dot_in__14_-1_0_2.png.npy  dot_in__15_-1_0_3.png.npy  dot_in__16_-1_0_4.png.npy  dot_in__17_-1_0_5.png.npy  dot_in__18_-1_0_6.png.npy  dot_in__19_-1_0_7.png.npy  dot_in__1_-1_-1_0.png.npy  dot_in__20_-1_0_8.png.npy  dot_in__21_-1_0_9.png.npy  dot_in__22_-1_0_10.png.npy  dot_in__24_-1_1_1.png.npy  dot_in__25_-1_1_2.png.npy  dot_in__26_-1_1_3.png.npy  dot_in__2_-1_-1_1.png.npy  dot_in__3_-1_-1_2.png.npy  dot_in__4_-1_-1_3.png.npy  dot_in__5_-1_-1_4.png.npy  dot_in__6_-1_-1_5.png.npy  dot_in__7_-1_-1_6.png.npy  dot_in__8_-1_-1_7.png.npy  dot_in__9_-1_-1_8.png.npy
gelsight_simulation/scripts/: data_collection_ti.py  depth_generation.py
